[gd_scene load_steps=24 format=4 uid="uid://jkshvwoh02gp"]

[ext_resource type="Script" path="res://Scripts/Menus/title.gd" id="1_eibuk"]
[ext_resource type="Shader" path="res://Shaders/post_processing.gdshader" id="2_jokb0"]
[ext_resource type="Script" path="res://addons/func_godot/src/map/func_godot_map.gd" id="3_y560p"]
[ext_resource type="Resource" uid="uid://bkhxcqsquw1yg" path="res://addons/func_godot/func_godot_default_map_settings.tres" id="4_80j0u"]
[ext_resource type="Material" uid="uid://d0aogo5bugl5o" path="res://textures/concrete256_3.tres" id="5_6dgc0"]
[ext_resource type="Texture2D" uid="uid://clfir4qcc03ft" path="res://textures/button4x1brownblurrededges.png" id="6_pqwl6"]
[ext_resource type="Texture2D" uid="uid://t211ga3svsfn" path="res://textures/button4x1browndarkened.png" id="7_agfcd"]
[ext_resource type="Texture2D" uid="uid://df4ex32yksl0v" path="res://textures/button4x1brownselected.png" id="8_4e5v5"]
[ext_resource type="Texture2D" uid="uid://5mw1t7551smq" path="res://textures/button4x1.png" id="9_auk3o"]
[ext_resource type="FontFile" uid="uid://chmmoxarhiqij" path="res://Assets/Fonts/Neothic.ttf" id="10_ye3fy"]
[ext_resource type="Texture2D" uid="uid://coq1025p0h4om" path="res://textures/complex_title.png" id="11_nk5va"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tsnph"]
shader = ExtResource("2_jokb0")
shader_parameter/enabled = true
shader_parameter/dithering = true
shader_parameter/colors = 16
shader_parameter/dither_size = 1

[sub_resource type="ArrayMesh" id="ArrayMesh_hwigi"]
_surfaces = [{
"aabb": AABB(-334.5, -0.5, -166.5, 412.5, 169.5, 343),
"attribute_data": PackedByteArray("AEAnwgAAAAAAQCfCAACAPQAAHEEAAIA9AAAcQQAAAAAAgKbBAAAAAACAsEEAAAAAAICwQQAAgD0AgKbBAACAPQCApsEAABzBAICmwQBAJ0IAgLBBAEAnQgCAsEEAABzBAICmwQAAHMEAgLBBAAAcwQCAsEEAQCdCAICmwQBAJ0IAgKbBAAAAAACApsEAAIA9AICwQQAAgD0AgLBBAAAAAABAJ8IAAAAAAAAcQQAAAAAAABxBAACAPQBAJ8IAAIA9AACSQAAAgsAAAJJAAAAAAAAADEEAAAAAAAAMQQAAgsAAgJtBAACCwAAAoEEAAILAAACgQQAAAAAAgJtBAAAAAACAm0EAAAzBAICbQQAAksAAAKBBAACSwAAAoEEAAAzBAICbQQAADMEAAKBBAAAMwQAAoEEAAJLAAICbQQAAksAAgJtBAACCwACAm0EAAAAAAACgQQAAAAAAAKBBAACCwAAAkkAAAILAAAAMQQAAgsAAAAxBAAAAAAAAkkAAAAAAAACaQAAAgsAAAJpAAAAAAAAAokAAAAAAAACiQAAAgsAAAJvBAACCwACApMEAAILAAICkwUAaN6cAAJvBsJ8spwAAokAAAJtBAACaQAAAm0EAAJpAAICkQQAAokAAgKRBAACiQAAAm0EAAKJAAICkQQAAmkAAgKRBAACaQAAAm0EAAJvBAACCwAAAm8GwnyynAICkwUAaN6cAgKTBAACCwAAAmkAAAILAAACiQAAAgsAAAKJAAAAAAAAAmkAAAAAAAABAvgAAqcEAAEC+AAAAAAAAgD0AAAAAAACAPQAAqcEAAOC/AACpwQCApMEAAKnBAICkwUAaN6cAAOC/gMaIpQAAgD0AAOA/AABAvgAA4D8AAEC+AICkQQAAgD0AgKRBAACAPQAA4D8AAIA9AICkQQAAQL4AgKRBAABAvgAA4D8AAOC/AACpwQAA4L+AxoilAICkwUAaN6cAgKTBAACpwQAAQL4AAKnBAACAPQAAqcEAAIA9AAAAAAAAQL4AAAAA"),
"format": 34359742487,
"index_count": 144,
"index_data": PackedByteArray("AAABAAIAAAACAAMABAAFAAYABAAGAAcACAAJAAoACAAKAAsADAANAA4ADAAOAA8AEAARABIAEAASABMAFAAVABYAFAAWABcAGAAZABoAGAAaABsAHAAdAB4AHAAeAB8AIAAhACIAIAAiACMAJAAlACYAJAAmACcAKAApACoAKAAqACsALAAtAC4ALAAuAC8AMAAxADIAMAAyADMANAA1ADYANAA2ADcAOAA5ADoAOAA6ADsAPAA9AD4APAA+AD8AQABBAEIAQABCAEMARABFAEYARABGAEcASABJAEoASABKAEsATABNAE4ATABOAE8AUABRAFIAUABSAFMAVABVAFYAVABWAFcAWABZAFoAWABaAFsAXABdAF4AXABeAF8A"),
"material": ExtResource("5_6dgc0"),
"name": "concrete256_3",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 96,
"vertex_data": PackedByteArray("AECnwwAAAAAAgCbDAECnwwAAAL8AgCbDAACcQgAAAL8AgCbDAACcQgAAAAAAgCbDAECnwwAAAAAAgCbDAECnwwAAAAAAgDBDAECnwwAAAL8AgDBDAECnwwAAAL8AgCbDAACcQgAAAL8AgCbDAECnwwAAAL8AgCbDAECnwwAAAL8AgDBDAACcQgAAAL8AgDBDAACcQgAAAAAAgCbDAACcQgAAAAAAgDBDAECnwwAAAAAAgDBDAECnwwAAAAAAgCbDAACcQgAAAAAAgCbDAACcQgAAAL8AgCbDAACcQgAAAL8AgDBDAACcQgAAAAAAgDBDAECnwwAAAAAAgDBDAACcQgAAAAAAgDBDAACcQgAAAL8AgDBDAECnwwAAAL8AgDBDAAAYQgAAAkIAABxDAAAYQgAAAAAAABxDAACPQgAAAAAAABxDAACPQgAAAkIAABxDAAAYQgAAAkIAABxDAAAYQgAAAkIAgCBDAAAYQgAAAAAAgCBDAAAYQgAAAAAAABxDAACPQgAAAAAAABxDAAAYQgAAAAAAABxDAAAYQgAAAAAAgCBDAACPQgAAAAAAgCBDAACPQgAAAkIAABxDAACPQgAAAkIAgCBDAAAYQgAAAkIAgCBDAAAYQgAAAkIAABxDAACPQgAAAkIAABxDAACPQgAAAAAAABxDAACPQgAAAAAAgCBDAACPQgAAAkIAgCBDAAAYQgAAAkIAgCBDAACPQgAAAkIAgCBDAACPQgAAAAAAgCBDAAAYQgAAAAAAgCBDAAAQQgAAAkIAgBxDAAAQQgAAAIAAgBxDAAAYQgAAAAAAgBxDAAAYQgAAAkIAgBxDAAAQQgAAAkIAgBxDAAAQQgAAAkIAACZDAAAQQgAAAAAAACZDAAAQQgAAAIAAgBxDAAAYQgAAAAAAgBxDAAAQQgAAAIAAgBxDAAAQQgAAAAAAACZDAAAYQgAAAAAAACZDAAAYQgAAAkIAgBxDAAAYQgAAAkIAACZDAAAQQgAAAkIAACZDAAAQQgAAAkIAgBxDAAAYQgAAAkIAgBxDAAAYQgAAAAAAgBxDAAAYQgAAAAAAACZDAAAYQgAAAkIAACZDAAAQQgAAAkIAACZDAAAYQgAAAkIAACZDAAAYQgAAAAAAACZDAAAQQgAAAAAAACZDAADAwAAAKUMAAHhBAADAwAAAAAAAAHhBAACAwAAAAAAAAHhBAACAwAAAKUMAAHhBAADAwAAAKUMAAHhBAADAwAAAKUMAACZDAADAwAAAAAAAACZDAADAwAAAAAAAAHhBAACAwAAAAAAAAHhBAADAwAAAAAAAAHhBAADAwAAAAAAAACZDAACAwAAAAAAAACZDAACAwAAAKUMAAHhBAACAwAAAKUMAACZDAADAwAAAKUMAACZDAADAwAAAKUMAAHhBAACAwAAAKUMAAHhBAACAwAAAAAAAAHhBAACAwAAAAAAAACZDAACAwAAAKUMAACZDAADAwAAAKUMAACZDAACAwAAAKUMAACZDAACAwAAAAAAAACZDAADAwAAAAAAAACZD/////////z//////////P/////////8//////////z8AAP9//3//vwAA/3//f/+/AAD/f/9//78AAP9//3//v/9/AAD/f/8//38AAP9//z//fwAA/3//P/9/AAD/f/8//3////9//7//f////3//v/9/////f/+//3////9//7////9//3//P////3//f/8/////f/9//z////9//3//P/9//3////+//3//f////7//f/9/////v/9//3////+//////////z//////////P/////////8//////////z8AAP9//3//vwAA/3//f/+/AAD/f/9//78AAP9//3//v/9/AAD/f/8//38AAP9//z//fwAA/3//P/9/AAD/f/8//3////9//7//f////3//v/9/////f/+//3////9//7////9//3//P////3//f/8/////f/9//z////9//3//P/9//3////+//3//f////7//f/9/////v/9//3////+//////////z//////////P/////////8//////////z8AAP9////+fwAA/3////5/AAD/f////n8AAP9////+f/9/AAAAAP8//38AAAAA/z//fwAAAAD/P/9/AAAAAP8//3///wAA/7//f///AAD/v/9///8AAP+//3///wAA/7////9///8AgP///3///wCA////f///AID///9///8AgP9//3////+//3//f////7//f/9/////v/9//3////+//////////z//////////P/////////8//////////z8AAP9////+fwAA/3////5/AAD/f////n8AAP9////+f/9/AAAAAP8//38AAAAA/z//fwAAAAD/P/9/AAAAAP8//3///wAA/7//f///AAD/v/9///8AAP+//3///wAA/7////9///8AgP///3///wCA////f///AID///9///8AgP9//3////+//3//f////7//f/9/////v/9//3////+/")
}]

[sub_resource type="ArrayOccluder3D" id="ArrayOccluder3D_mpl7e"]
vertices = PackedVector3Array(-334.5, 0, -166.5, -334.5, -0.5, -166.5, 78, -0.5, -166.5, 78, 0, -166.5, -334.5, 0, -166.5, -334.5, 0, 176.5, -334.5, -0.5, 176.5, -334.5, -0.5, -166.5, 78, -0.5, -166.5, -334.5, -0.5, -166.5, -334.5, -0.5, 176.5, 78, -0.5, 176.5, 78, 0, -166.5, 78, 0, 176.5, -334.5, 0, 176.5, -334.5, 0, -166.5, 78, 0, -166.5, 78, -0.5, -166.5, 78, -0.5, 176.5, 78, 0, 176.5, -334.5, 0, 176.5, 78, 0, 176.5, 78, -0.5, 176.5, -334.5, -0.5, 176.5, 38, 32.5, 156, 38, 0, 156, 71.5, 0, 156, 71.5, 32.5, 156, 38, 32.5, 156, 38, 32.5, 160.5, 38, 0, 160.5, 38, 0, 156, 71.5, 0, 156, 38, 0, 156, 38, 0, 160.5, 71.5, 0, 160.5, 71.5, 32.5, 156, 71.5, 32.5, 160.5, 38, 32.5, 160.5, 38, 32.5, 156, 71.5, 32.5, 156, 71.5, 0, 156, 71.5, 0, 160.5, 71.5, 32.5, 160.5, 38, 32.5, 160.5, 71.5, 32.5, 160.5, 71.5, 0, 160.5, 38, 0, 160.5, 36, 32.5, 156.5, 36, 0, 156.5, 38, 0, 156.5, 38, 32.5, 156.5, 36, 32.5, 156.5, 36, 32.5, 166, 36, 0, 166, 36, 0, 156.5, 38, 0, 156.5, 36, 0, 156.5, 36, 0, 166, 38, 0, 166, 38, 32.5, 156.5, 38, 32.5, 166, 36, 32.5, 166, 36, 32.5, 156.5, 38, 32.5, 156.5, 38, 0, 156.5, 38, 0, 166, 38, 32.5, 166, 36, 32.5, 166, 38, 32.5, 166, 38, 0, 166, 36, 0, 166, -6, 169, 15.5, -6, 0, 15.5, -4, 0, 15.5, -4, 169, 15.5, -6, 169, 15.5, -6, 169, 166, -6, 0, 166, -6, 0, 15.5, -4, 0, 15.5, -6, 0, 15.5, -6, 0, 166, -4, 0, 166, -4, 169, 15.5, -4, 169, 166, -6, 169, 166, -6, 169, 15.5, -4, 169, 15.5, -4, 0, 15.5, -4, 0, 166, -4, 169, 166, -6, 169, 166, -4, 169, 166, -4, 0, 166, -6, 0, 166)
indices = PackedInt32Array(0, 1, 2, 0, 2, 3, 4, 5, 6, 4, 6, 7, 8, 9, 10, 8, 10, 11, 12, 13, 14, 12, 14, 15, 16, 17, 18, 16, 18, 19, 20, 21, 22, 20, 22, 23, 24, 25, 26, 24, 26, 27, 28, 29, 30, 28, 30, 31, 32, 33, 34, 32, 34, 35, 36, 37, 38, 36, 38, 39, 40, 41, 42, 40, 42, 43, 44, 45, 46, 44, 46, 47, 48, 49, 50, 48, 50, 51, 52, 53, 54, 52, 54, 55, 56, 57, 58, 56, 58, 59, 60, 61, 62, 60, 62, 63, 64, 65, 66, 64, 66, 67, 68, 69, 70, 68, 70, 71, 72, 73, 74, 72, 74, 75, 76, 77, 78, 76, 78, 79, 80, 81, 82, 80, 82, 83, 84, 85, 86, 84, 86, 87, 88, 89, 90, 88, 90, 91, 92, 93, 94, 92, 94, 95)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_uyjq8"]
points = PackedVector3Array(-334.5, 0, -166.5, -334.5, -0.5, -166.5, 78, -0.5, -166.5, 78, 0, -166.5, -334.5, 0, 176.5, -334.5, -0.5, 176.5, 78, -0.5, 176.5, 78, 0, 176.5)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_35v8f"]
points = PackedVector3Array(38, 32.5, 156, 38, 0, 156, 71.5, 0, 156, 71.5, 32.5, 156, 38, 32.5, 160.5, 38, 0, 160.5, 71.5, 0, 160.5, 71.5, 32.5, 160.5)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_g4cak"]
points = PackedVector3Array(36, 32.5, 156.5, 36, 0, 156.5, 38, 0, 156.5, 38, 32.5, 156.5, 36, 32.5, 166, 36, 0, 166, 38, 0, 166, 38, 32.5, 166)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_w8o1x"]
points = PackedVector3Array(-6, 169, 15.5, -6, 0, 15.5, -4, 0, 15.5, -4, 169, 15.5, -6, 169, 166, -6, 0, 166, -4, 0, 166, -4, 169, 166)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_t76y7"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_dp3nh"]
sky_material = SubResource("ProceduralSkyMaterial_t76y7")

[sub_resource type="Environment" id="Environment_6hum5"]
background_mode = 2
sky = SubResource("Sky_dp3nh")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q4ftb"]
shader = ExtResource("2_jokb0")
shader_parameter/enabled = true
shader_parameter/dithering = true
shader_parameter/colors = 16
shader_parameter/dither_size = 2

[sub_resource type="LabelSettings" id="LabelSettings_yjedy"]
font = ExtResource("10_ye3fy")
font_size = 50
font_color = Color(0.847474, 0.847474, 0.847474, 0.423529)

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eibuk")

[node name="Game" type="SubViewportContainer" parent="."]
material = SubResource("ShaderMaterial_tsnph")
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="Game"]
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="FuncGodotMap" type="Node3D" parent="Game/SubViewport"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
script = ExtResource("3_y560p")
local_map_file = "res://Scenes/Levels/conccell_title.map"
map_settings = ExtResource("4_80j0u")

[node name="entity_0_worldspawn" type="StaticBody3D" parent="Game/SubViewport/FuncGodotMap"]
collision_mask = 0

[node name="entity_0_mesh_instance" type="MeshInstance3D" parent="Game/SubViewport/FuncGodotMap/entity_0_worldspawn"]
mesh = SubResource("ArrayMesh_hwigi")

[node name="entity_0_occluder_instance" type="OccluderInstance3D" parent="Game/SubViewport/FuncGodotMap/entity_0_worldspawn"]
occluder = SubResource("ArrayOccluder3D_mpl7e")

[node name="entity_0_brush_0_collision_shape" type="CollisionShape3D" parent="Game/SubViewport/FuncGodotMap/entity_0_worldspawn"]
shape = SubResource("ConvexPolygonShape3D_uyjq8")

[node name="entity_0_brush_1_collision_shape" type="CollisionShape3D" parent="Game/SubViewport/FuncGodotMap/entity_0_worldspawn"]
shape = SubResource("ConvexPolygonShape3D_35v8f")

[node name="entity_0_brush_2_collision_shape" type="CollisionShape3D" parent="Game/SubViewport/FuncGodotMap/entity_0_worldspawn"]
shape = SubResource("ConvexPolygonShape3D_g4cak")

[node name="entity_0_brush_3_collision_shape" type="CollisionShape3D" parent="Game/SubViewport/FuncGodotMap/entity_0_worldspawn"]
shape = SubResource("ConvexPolygonShape3D_w8o1x")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Game/SubViewport"]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="Game/SubViewport"]
environment = SubResource("Environment_6hum5")

[node name="MenuCam" type="Camera3D" parent="Game/SubViewport"]
unique_name_in_owner = true
transform = Transform3D(-0.794618, 0.0667267, -0.603432, 0.0531406, 0.997771, 0.040355, 0.60478, 1.35179e-08, -0.796393, -45.4591, 21.8631, -171.918)
fov = 60.0

[node name="Start" type="TextureButton" parent="."]
process_mode = 3
material = SubResource("ShaderMaterial_q4ftb")
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = -352.8
offset_right = 899.2
offset_bottom = -148.0
grow_vertical = 0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("6_pqwl6")
texture_pressed = ExtResource("7_agfcd")
texture_hover = ExtResource("8_4e5v5")
texture_disabled = ExtResource("9_auk3o")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="Start"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -262.0
offset_top = -81.6
offset_right = 120.0
offset_bottom = 24.4
grow_horizontal = 2
grow_vertical = 2
rotation = 0.0254088
scale = Vector2(3, 3)
text = "ENTER"
label_settings = SubResource("LabelSettings_yjedy")

[node name="Settings" type="TextureButton" parent="."]
process_mode = 3
material = SubResource("ShaderMaterial_q4ftb")
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = -245.8
offset_right = 899.2
offset_bottom = -41.0
grow_vertical = 0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("6_pqwl6")
texture_pressed = ExtResource("7_agfcd")
texture_hover = ExtResource("8_4e5v5")
texture_disabled = ExtResource("9_auk3o")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="Settings"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -352.0
offset_top = -45.3999
offset_right = 30.0
offset_bottom = 60.6001
grow_horizontal = 2
grow_vertical = 2
rotation = -0.0697543
scale = Vector2(3, 3)
text = "OPTIONS"
label_settings = SubResource("LabelSettings_yjedy")

[node name="Close" type="TextureButton" parent="."]
process_mode = 3
material = SubResource("ShaderMaterial_q4ftb")
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = -138.8
offset_right = 899.2
offset_bottom = 66.0
grow_vertical = 0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("6_pqwl6")
texture_pressed = ExtResource("7_agfcd")
texture_hover = ExtResource("8_4e5v5")
texture_disabled = ExtResource("9_auk3o")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="Close"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -262.0
offset_top = -81.6
offset_right = 120.0
offset_bottom = 24.4
grow_horizontal = 2
grow_vertical = 2
rotation = 0.0296737
scale = Vector2(3, 3)
text = "QUIT"
label_settings = SubResource("LabelSettings_yjedy")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 2
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -782.0
offset_top = 114.0
offset_right = 263.0
offset_bottom = 509.0
grow_horizontal = 0
scale = Vector2(0.6, 0.6)
texture = ExtResource("11_nk5va")
stretch_mode = 4

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
